--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>gitspell - spellcheck for code by gitspell</title>
+    <title>gitspell - spellcheck magic for code</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>gitspell - spellcheck for code</h1>
+        <h1>gitspell - spellcheck magic for code</h1>
         <p>coming soon</p>
         <p class="view"><a href="https://github.com/gitspell">View the Project on GitHub <small>gitspell</small></a></p>
         <ul>
@@ -26,9 +26,7 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-gitspell" class="anchor" href="#welcome-to-gitspell" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Gitspell</h3>
-
-<p>Making the world a better place, one typo at a time.</p>
+<a id="welcome-to-gitspell" class="anchor" href="#welcome-to-gitspell" aria-hidden="true"><span class="octicon octicon-link"></span></a>Making the world a better place, one typo at a time.</h3>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ gitspell check
